# FastAPI-Learning

./: README.md  pyproject.toml
01-Web-Server-Basics/: main.py
02-CRUD-Rest-API/: main.py
